--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://bangalore.pythonindia.com">
+    <meta http-equiv="refresh" content="0; url=https://bangalore.pythonindia.org">
     <title>BangPypers</title>
   </head>
 <body>
-  <p>Click here if not redirected automatically to <a href="https://bangalore.pythonindia.com">https://bangalore.pythonindia.com</a></p>
+  <p>Click here if not redirected automatically to <a href="https://bangalore.pythonindia.org">https://bangalore.pythonindia.org</a></p>
 </body>
 </html>
